<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FirstQuestion"
    android:orientation="vertical"
    android:background="@color/gray_3f3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1/3"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        android:gravity="end"
        android:padding="6dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question1"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/Answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Answer1_Q1"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/Answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Answer2_Q1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/Answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Answer3_Q1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
</LinearLayout>